# zip-tight

./: Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
docs/: PRD.md
src/: main.rs
